--- a/4_Warsztaty/style.css
+++ b/4_Warsztaty/style.css
@@ -61,10 +61,12 @@ a {
  ul.menu li {
      padding: 10px;
  }
+
 /*SEKCJA 1  */
+
 .arrows a{
     color: #26BAA0;
-    font-weight: 200;
+    font-weight: lighter;
     font-size: 80px;
 }
 .section1 {
@@ -82,19 +84,46 @@ section .container {
     width: 470px;
 }
 h1 span {
-    padding: 7px;
     font-size: 30px;
     letter-spacing: 1px;
+    font-weight: 800;
 }
+
 span:nth-of-type(2) {
     color: #26BAA0;
+    font-weight: 900;
 }
 span:nth-of-type(4) {
     color: #26BAA0;
+    font-weight: 900;
+}
+div#article p {
+    line-height: 18px;
+    font-size: 12px;
+    margin-top:40px;
+    margin-bottom: 40px;
+    text-align: center;
+
+}
+#article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 60px;
 }
 
-
-
+button {
+    height: 50px;
+    width: 260px;
+    background-color:#26BAA0;
+    color: white;
+    border: 1px solid #26BAA0 ;
+    border-radius: 7px;
+    text-align: center;
+    font-size: 20px;
+    font-family: Raleway;
+}
 
 
 /*SEKCJA 2  */
@@ -113,6 +142,8 @@ section.container {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    display: flex;
+    align-items: flex-end;
 }
 #margarita {
     background-image: url("images/box2_img.jpg");
@@ -121,7 +152,10 @@ section.container {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    display: flex;
+    align-items: flex-end;
 }
+
 .articleSection2 {
     box-sizing: border-box;
     width: 340px;
@@ -135,9 +169,319 @@ section.container {
     font-size: 13px;
     margin-left: 24px;
     padding-top: 30px;
+    margin-right: 30px;
 }
 .opacityWhiteBackground {
     height: 62px;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.5);
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: column;
 }
+
+h3:after {
+    content: "";
+    display: block;
+    height: 7px;
+    width:138px;
+    background-color: #26BAA0;
+}
+div.opacityWhiteBackground:after {
+    content: "";
+    height: 7px;
+    width:138px;
+    background-color: #26BAA0;
+}
+/* Section3*/
+
+.section3 {
+    background-color: #F1F1F1;
+    height: 725px ;
+}
+
+.priceBox {
+    height: 496px;
+    width: 326px;
+    border: 2px solid #D5D4DA;
+    text-align: center;
+    font-size: 17px;
+    background-color: #F9F9F9;
+}
+
+.prices {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+section.section3 .container {
+     display: flex;
+     flex-direction: column;
+}
+
+div.titleSection3 {
+   width: 100%;
+    margin-top: 50px;
+}
+
+h2:after {
+    content: "";
+    display: block;
+    height: 7px;
+    width: 322px;
+    background-color: #26BAA0;
+    margin-bottom: 40px;
+}
+.priceBox--Middle {
+    height: 496px;
+    width: 326px;
+    border: 2px solid #26BAA0;
+    text-align: center;
+    font-size: 17px;
+    background-color: #26BAA0;
+}
+#buttonMiddle {
+    background-color: white;
+    color: #26BAA0;
+    width: 124px;
+    height: 35px;
+}
+#buttonMiddle a {
+    color:#26BAA0 ;
+    font-size: 13px;
+    font-family: Raleway;
+}
+
+.buttonLeftRight {
+    width: 124px;
+    height: 35px;
+    font-size: 13px;
+    font-family: Raleway;
+}
+
+.plans {
+    font-size: 20px;
+    margin-top: 30px;
+    position: relative;
+    font-weight: 600;
+    color:#26BAA0;
+    letter-spacing: 1px;
+}
+.plans:before {
+    content: "";
+    display: block;
+    width: 55px;
+    height: 55px;
+    border: 2px solid #D5D4DA;
+    background-color: #B6B6B6;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 13px #fff ;
+    position: absolute;
+    left: calc(50% - 25px);
+    top: -70px;
+}
+ .price {
+     height: 125px;
+     width: 125px;
+     border: solid 2px #D5D4DA;
+     background-color: white;
+     border-radius: 50%;
+     display: flex;
+     flex-direction: column;
+ }
+div.price p:first-child {
+    font-size: 35px;
+    font-weight: 700;
+    color: #CBCBCB;
+}
+div.price p:last-child {
+    font-size: 12px;
+    color: #CBCBCB;
+}
+div.priceBox div:nth-of-type(2) {
+    height: 45px;
+    width: 100%;
+    background-color:#E4E4E4;
+    color: #C3C3C3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+div.priceBox div:nth-of-type(3) {
+    height: 45px;
+    width: 100%;
+    background-color:#F1F1F1;
+    color: #C3C3C3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+div.priceBox div:nth-of-type(4) {
+    height: 45px;
+    width: 100%;
+    background-color:#E4E4E4;
+    color: #C3C3C3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+div.priceBox div:nth-of-type(5) {
+    height: 45px;
+    width: 100%;
+    background-color:#F1F1F1;
+    color: #C3C3C3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+
+/*srodkowa cena*/
+
+.plansStandard {
+    color:white;
+    font-size: 20px;
+    margin-top: 30px;
+    position: relative;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.plansStandard:before {
+    content: "";
+    display: block;
+    width: 55px;
+    height: 55px;
+    border: 2px solid #26BAA0;
+    background-color: white;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 12px #26BAA0 ;
+    position: absolute;
+    left: calc(50% - 25px);
+    top: -70px;
+}
+div.priceStandard p:first-child {
+    font-size: 35px;
+    font-weight: 700;
+    color: #26BAA0;
+}
+div.priceStandard p:last-child {
+    font-size: 12px;
+    color: #26BAA0;
+}
+
+.priceStandard {
+    height: 125px;
+    width: 125px;
+    border: solid 2px #26BAA0;
+    background-color: white;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+}
+div.priceBox--Middle div:nth-of-type(3) {
+    height: 45px;
+    width: 100%;
+    background-color:white;
+    color: #C3C3C3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+div.priceBox--Middle div:nth-of-type(4) {
+    height: 45px;
+    width: 100%;
+    background-color:#F1F1F1;
+    color: #C3C3C3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+div.priceBox--Middle div:nth-of-type(5) {
+    height: 45px;
+    width: 100%;
+    background-color:white;
+    color: #C3C3C3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+/*section4*/
+.section4 {
+    margin-top: 0;
+    height: 490px;
+    display: flex;
+    flex-direction: column;
+}
+
+.section4--Chair {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+#redChair {
+    height: 185px;
+    width: 230px;
+    align-self: center;
+}
+section.section4 .container{
+    display: flex;
+    flex-direction: column;
+}
+.section4--Form-Chair {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+div.section4--Form-Chair {
+    justify-content: space-between;
+}
+#contact{
+    width: 100%;
+    margin-top: 35px;
+}
+/*formularz*/
+form input {
+    width: 635px;
+    height: 65px;
+    border: 1px solid rgba(38, 186, 160, 0.5);
+    align-items: center;
+    margin-bottom: 25px;
+}
+input::placeholder {
+    color: #C3C3C3;
+    font-size: 25px;
+    font-family: Raleway;
+}
+textarea {
+    width: 635px;
+    border: 1px solid rgba(38, 186, 160, 0.5);
+    height: 190px;
+    resize: none;
+}
+textarea::placeholder {
+    color: #C3C3C3;
+    font-size: 25px;
+    font-family: Raleway;
+}
+/*checkbox*/
+.section4--Form-Chair input:last-child {
+    height: 72px;
+    width: 340px;
+    background-color:#26BAA0;
+    color: white;
+    border: 1px solid #26BAA0 ;
+    border-radius: 7px;
+    text-align: center;
+    font-size: 25px;
+    font-family: Raleway;
+    font-weight: 600;
+}
+footer
