--- a/4_Warsztaty/style.css
+++ b/4_Warsztaty/style.css
@@ -46,13 +46,34 @@ div.container p {
      display: flex;
      list-style: none;
      text-decoration: none;
+     position: relative;
  }
 
 .hover {
     list-style-type: none;
     line-height: 2px;
     background-color: black;
-    display: none;
+    /*display: none;*/
+    color: white;
+    position: absolute;
+    top:50px;
+    left: 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.hover:first-of-type:before{
+    width: 0px;
+    height: 0px;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid black;
+    content: "";
+    position: absolute;
+    top: -10px;
+    left: 35px;
 }
 a {
     text-decoration: none;
