--- a/4_Warsztaty/style.css
+++ b/4_Warsztaty/style.css
@@ -53,7 +53,7 @@ div.container p {
     list-style-type: none;
     line-height: 2px;
     background-color: black;
-    /*display: none;*/
+    display: none;
     color: white;
     position: absolute;
     top:50px;
@@ -91,21 +91,44 @@ a {
     font-weight: lighter;
     font-size: 80px;
 }
+
 .section1 {
     width: 100%;
     height: 500px;
     background:linear-gradient(#FAFAFA,#D2D1D9);
 }
 
-section .container {
+.section1 .container {
     height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
+/*slider*/
+.slider{
+    display: flex;
+    height: 100%;
+
+}
+.slider ul{
+    list-style: none;
+}
+
+.slider li{
+    display: none;
+}
+
+.slider .visible{
+    display: flex;
+    align-self: center;
+}
 .blackChair {
     width: 470px;
 }
+
+/*koniec slider*/
+
 h1 span {
     font-size: 30px;
     letter-spacing: 1px;
